Fixing screen width when scroll is visible

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  width: 100vw;
+}
+
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
